--- a/ebook/ebookstore/templates/ebookstore/Register.html
+++ b/ebook/ebookstore/templates/ebookstore/Register.html
@@ -73,7 +73,7 @@
                                    <form class="form-horizontal">
                                       <fieldset>
                                         <div class="control-group">
-                                          <label class="control-label" for="focusedInput">姓名</label>
+                                          <label class="control-label" for="focusedInput">用户名</label>
                                           <div class="controls">
                                             <input class="input-xlarge focused" id="focusedInput" type="text" value="">
                                           </div>
