--- a/ebook/ebookstore/templates/ebookstore/index.html
+++ b/ebook/ebookstore/templates/ebookstore/index.html
@@ -207,7 +207,7 @@
 					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> 用户 <i class="caret"></i>
+								<i class="icon-user"></i> {{name}} <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
@@ -221,7 +221,7 @@
 								</li>
 								<li class="divider"></li>
 								<li>
-									<a tabindex="-1" href="login">退出登录</a>
+									<a tabindex="-1" href="logout">退出登录</a>
 								</li>
 							</ul>
 						</li>
