--- a/ebook/ebookstore/templates/ebookstore/Login.html
+++ b/ebook/ebookstore/templates/ebookstore/Login.html
@@ -65,7 +65,7 @@
 				<div class="control-group" align="left" style="margin-left: 115px;">
 					<label class="control-label" for="focusedInput">密码</label>
 					<div class="controls">
-						<input class="input-xlarge focused" id="focusedInput" name="password" type="text" value="">
+						<input class="input-xlarge focused" id="focusedInput" name="password" type="password" value="">
 					</div>
 				</div>
 				<div class="control-group" align="left" style="margin-left: 115px;">
@@ -75,8 +75,8 @@
 					</div>
 				</div>
 				<div class="btn-group" role="group">
-					<button id="loginbutton" class="btn btn-success" style="width:100px;height:30px">登录</button>
-					<a class="btn btn-primary" href="Register.html" role="button" style="width:100px;height:30px">注册</a>
+					<button id="loginbutton" class="btn btn-success" type="submit" style="width:100px;height:30px">登录</button>
+					<a class="btn btn-primary" href="register" role="button" style="width:100px;height:30px">注册</a>
 				</div>
 
 			</div>
@@ -115,9 +115,10 @@
 							alert('登录失败');
 						},
 						success: function(data) {
-							if(data==1){
+							if(data['res']==1){
 								//location.href="index.html"
 								alert("success");
+								window.location=data['url']
 							}else{
 								alert("failure");
 							}
