--- a/ebook/ebookstore/templates/ebookstore/index.html
+++ b/ebook/ebookstore/templates/ebookstore/index.html
@@ -198,13 +198,14 @@
 							<a href="#">新书上架</a>
 						</li>
 					</ul>
-					
+
 					<!--
                     	作者：offline
                     	时间：2018-09-05
                     	描述：用户已登录
                     -->
-					<ul class="nav pull-right">
+                    <!--
+					<ul class="nav pull-right" id="vip">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
 								<i class="icon-user"></i> 用户 <i class="caret"></i>
@@ -226,22 +227,24 @@
 							</ul>
 						</li>
 					</ul>
-					<!--
+					-->
                     	时间：2018-09-05
                     	描述：用户未登陆时代码
-                    	<ul class="nav pull-right">
+                    <ul class="nav pull-right" id="tourist">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
 								<i class="icon-user"></i> 游客 <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
+							    <li>
+									<a tabindex="-1" href="login">登录</a>
+								</li>
 								<li>
-									<a tabindex="-1" href="login">注册</a>
+									<a tabindex="-1" href="register">注册</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-                    -->
 				</div>
 			</div>
 		</nav>
