--- a/ebook/ebookstore/templates/ebookstore/conment-manage.html
+++ b/ebook/ebookstore/templates/ebookstore/conment-manage.html
@@ -10,9 +10,9 @@
 		<title>评价管理</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<link href="/static/ebookstor/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/styles.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/styles.css" rel="stylesheet" media="screen">
 		<link href="/static/ebookstore/assets/DT_bootstrap.css" rel="stylesheet" media="screen">
 		<script src="/static/ebookstore/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<script src="/static/ebookstore/vendors/jquery-1.9.1.js"></script>
@@ -136,7 +136,7 @@
 			                <tr>
 			                  <td>3</td>
 			                  <td>Larry</td>
-			                  <td><a href="user-manage.html">王卫国</a></td>
+			                  <td><a href="user-manage.html">zzuwenjie</a></td>
 			                  <td>@twitter</td>
 			                  <td><div class="btn-group" role="group" >
 									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
