--- a/ebook/ebookstore/templates/ebookstore/Login.html
+++ b/ebook/ebookstore/templates/ebookstore/Login.html
@@ -129,12 +129,15 @@
 						success: function(data) {
 							switch(Number(data)) {
 								case 1:
+								    /*
 									if(rememberElement.value == true) {
-										var a = document.cookie = `${encodeURIComponent(name)}=${encodeURIComponent(password)};expires=${new Date(Date.now()+30*86400*1000)}`;
-										console.log(a);
-
+										document.cookie =
+											`name=${encodeURIComponent(name)};expires=${new Date(Date.now()+30*86400*1000)}`;
+										document.cookie =
+											`password=${encodeURIComponent(password)};expires=${new Date(Date.now()+30*86400*1000)}`;
 									}
-									location.href = "./index";
+									*/
+									location.href = "/ebookstore/index";
 									break;
 								case 0:
 									alert("用户名或密码不正确！");
