--- a/ebook/ebookstore/templates/ebookstore/MyInoformation.html
+++ b/ebook/ebookstore/templates/ebookstore/MyInoformation.html
@@ -12,9 +12,9 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/static/ebookstore/js/bootstrap.min.js"></script>
-		<link href="/static/ebookstor/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/styles.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/styles.css" rel="stylesheet" media="screen">
 		<script src="/static/ebookstore/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<style>
 			body {
@@ -72,7 +72,7 @@
 					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> 用户 <i class="caret"></i>
+								<i class="icon-user"></i> {{ name }} <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
@@ -107,7 +107,7 @@
 							<div class="control-group">
 								<label class="control-label">用户名</label>
 								<div class="controls">
-									<span class="input-xlarge uneditable-input">此处为用户名</span>
+									<span class="input-xlarge uneditable-input">{{ name }}</span>
 								</div>
 							</div>
 							<div class="control-group">
@@ -127,11 +127,11 @@
 								<label class="control-label" for="typeahead">密码 </label>
 								<div class="controls" id="psw_invisible1">
 									<input type="password"class="span6" id="input_invisible1" />
-									<img id="visible" onclick="showPsw()" src="img/关闭.jpg">
+									<img id="visible" onclick="showPsw()" src="/static/ebookstore/img/关闭.jpg">
 								</div>
 								<!--明文密码输入框-->
 								<div class="controls" id="psw_visible1" style="display: none;">
-									<img id="invisible" onclick="hidePsw()" src="img/打开.jpg">
+									<img id="invisible" onclick="hidePsw()" src="/static/ebookstore/img/打开.jpg">
 									<input type="text" class="span6" id="input_visible1"  />
 								</div>
 							</div>
