--- a/ebook/ebookstore/templates/ebookstore/index.html
+++ b/ebook/ebookstore/templates/ebookstore/index.html
@@ -2,11 +2,6 @@
 <html>
 
 	<head>
-		<!--
-        	作者：offline
-        	时间：2018-09-07
-        	描述：主页
-        -->
 		<meta charset="UTF-8">
 		<title>eBookStore</title>
 		<link rel="stylesheet" href="/static/ebookstore/bootstrap/css/bootstrap.min.css">
@@ -163,6 +158,11 @@
 				left: 50%;
 				margin-left: -20px;
 			}
+            #showBook img {
+				width: 70%;
+				height: 70%;
+				box-shadow: 10px 10px 5px #222222;
+			}
 		</style>
 
 	</head>
@@ -177,7 +177,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-					<a class="navbar-brand" href="#">My-eBookStore</a>
+					<a class="navbar-brand" href="#">eBookStore</a>
 				</div>
 				<div class="collapse navbar-collapse bs-js-navbar-scrollspy">
 					<ul class="nav navbar-nav">
@@ -190,10 +190,10 @@
 							</a>
 							<ul class="dropdown-menu" id="menu1">
 
-								<li>
+                                <li id="selectComputer">
 									<a href="#">计算机类</a>
 								</li>
-								<li>
+								<li id="selectEnglish">
 									<a href="#">英语类</a>
 								</li>
 
@@ -203,20 +203,21 @@
 							<a href="#">新书上架</a>
 						</li>
 					</ul>
-					
 					<!--
                     	作者：offline
                     	时间：2018-09-05
                     	描述：用户已登录
                     -->
-					<ul class="nav pull-right">
+                    {% if name %}
+
+					<ul class="nav pull-right" id="vip">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> {{ name }} <i class="caret"></i>
+								<i class="icon-user"></i> {{name}} <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
-									<a tabindex="-1" href="#">我的信息</a>
+									<a tabindex="-1" href="/ebookstore/myinfo">我的信息</a>
 								</li>
 								<li>
 									<a tabindex="-1" href="#">我的订单</a>
@@ -225,29 +226,33 @@
 									<a tabindex="-1" href="#">购物车</a>
 								</li>
 								<li class="divider"></li>
-
 								<li>
-									<a tabindex="-1" href="logout">退出登录</a>
+									<a tabindex="-1" href="/ebookstore/logout">退出登录</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-					<!--
-                    	时间：2018-09-05
+                    {% else %}
+                    <!--
+                        时间：2018-09-05
                     	描述：用户未登陆时代码
-                    	<ul class="nav pull-right">
+                    -->
+                    <ul class="nav pull-right" id="tourist">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
 								<i class="icon-user"></i> 游客 <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
+							    <li>
+									<a tabindex="-1" href="/ebookstore/login">登录</a>
+								</li>
 								<li>
-									<a tabindex="-1" href="login.html">注册</a>
+									<a tabindex="-1" href="/ebookstore/register">注册</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-                    -->
+                    {% endif %}
 				</div>
 			</div>
 		</nav>
@@ -255,8 +260,17 @@
 		<div class="row">
 			<div class="col-xs-6 col-md-4">
 				<label class="ac-label">书店公告</label>
+                <!--
 				<MARQUEE style="background-color:ghostwhite;" ; this.stop() onmouseout=this.start() scrollAmount=1 scrollDelay=1 direction=up height=150>
-					<div id="showNotice"></div>
+
+                    <div id="showNotice"></div>
+
+				</MARQUEE>
+				-->
+                <MARQUEE style="background-color:ghostwhite;" behavior="scroll" scrollamount="3" scrollDelay="20" direction="up" height="150px">
+					<div id="showNotice">
+
+					</div>
 				</MARQUEE>
 				<div class="ac" style="background-color:whitesmoke;border-radius:7px ;">
 					<input class="ac-input" id="ac-2" name="ac-2" type="checkbox">
@@ -265,17 +279,9 @@
 						<div class="ac-sub">
 							<input class="ac-input" id="ac-2-1" name="ac-2-1" type="checkbox">
 							<label class="ac-label" for="ac-2-1">英语类</label>
-							<article class="ac-sub-text">
+							<article id="english" class="ac-sub-text">
 								<a href="" class="list-group-item ">1.英语类</a>
 								<a href="" class="list-group-item ">2.英语类</a>
-								<a href="" class="list-group-item ">3.英语类</a>
-								<a href="" class="list-group-item ">4.英语类</a>
-								<a href="" class="list-group-item ">5.英语类</a>
-								<a href="" class="list-group-item ">6.英语类</a>
-								<a href="" class="list-group-item ">7.英语类</a>
-								<a href="" class="list-group-item ">8.英语类</a>
-								<a href="" class="list-group-item ">9.英语类</a>
-								<a href="" class="list-group-item ">10.英语类</a>
 							</article>
 						</div>
 					</article>
@@ -283,17 +289,9 @@
 						<div class="ac-sub">
 							<input class="ac-input" id="ac-2-2" name="ac-2-2" type="checkbox">
 							<label class="ac-label" for="ac-2-2">计算机类</label>
-							<article class="ac-sub-text">
+							<article id="computer" class="ac-sub-text">
 								<a href="" class="list-group-item ">1.计算机类</a>
 								<a href="" class="list-group-item ">2.计算机类</a>
-								<a href="" class="list-group-item ">3.计算机类</a>
-								<a href="" class="list-group-item ">4.计算机类</a>
-								<a href="" class="list-group-item ">5.计算机类</a>
-								<a href="" class="list-group-item ">6.计算机类</a>
-								<a href="" class="list-group-item ">7.计算机类</a>
-								<a href="" class="list-group-item ">8.计算机类</a>
-								<a href="" class="list-group-item ">9.计算机类</a>
-								<a href="" class="list-group-item ">10.计算机类</a>
 							</article>
 						</div>
 					</article>
@@ -301,17 +299,9 @@
 						<div class="ac-sub">
 							<input class="ac-input" id="ac-2-3" name="ac-2-3" type="checkbox">
 							<label class="ac-label" for="ac-2-3">总榜</label>
-							<article class="ac-sub-text">
+							<article id="total" class="ac-sub-text">
 								<a href="" class="list-group-item ">1.计算机类</a>
 								<a href="" class="list-group-item ">2.计算机类</a>
-								<a href="" class="list-group-item ">3.计算机类</a>
-								<a href="" class="list-group-item ">4.计算机类</a>
-								<a href="" class="list-group-item ">5.计算机类</a>
-								<a href="" class="list-group-item ">6.计算机类</a>
-								<a href="" class="list-group-item ">7.计算机类</a>
-								<a href="" class="list-group-item ">8.计算机类</a>
-								<a href="" class="list-group-item ">9.计算机类</a>
-								<a href="" class="list-group-item ">10.计算机类</a>
 							</article>
 						</div>
 					</article>
@@ -355,9 +345,12 @@
 						</div>
 					</form>
 				</div>
-				
-				
+				<div id="showBook">
+
+				</div>
+				<!--
 				<div>
+
 				<div class="col-xs-6 col-md-4" >
 					<a href="">
 					<img src="/static/ebookstore/img/书1.jpg" style="height:70% ; width:70%;">
@@ -366,6 +359,7 @@
 						<h3 style=" color: white;">书籍名称</h3>
 					</a>
 				</div>
+
 				<div class="col-xs-6 col-md-4" >
 					<a href="">
 					<img src="/static/ebookstore/img/书1.jpg" style="height:70% ; width:70%;">
@@ -399,8 +393,201 @@
 					</a>
 				</div>
 				</div>
-			</div>
+			    -->
+            </div>
 		</div>
+
+    <script type="text/javascript">
+        var selectComputer = document.querySelector("#selectComputer"),
+				selectEnglish = document.querySelector("#selectEnglish");
+
+			selectComputer.onclick = function() {
+				$.ajax({
+					url: "/ebookstore/getBook?suject=english",
+					method: "get",
+					error: function() {
+						alert('数据出错，请刷新');
+					},
+					success: function(data) {
+						var arr = JSON.parse(data),
+							len = arr.length,
+							showBookHTML = "";
+						for(var i = 0; i < len; i++) {
+							showBookHTML += `<div class="col-xs-6 col-md-4">
+								<a href="BookDetail.html?id=${arr[i].id}">
+									<img src="${arr[i].url}" >
+								</a>
+								<a href="BookDetail.html?id=${arr[i].id}">
+									<h3 style=" color: white;">${arr[i].name}</h3>
+								</a>
+							</div>`;
+						}
+						showBook.innerHTML = showBookHTML;
+					}
+				});
+			}
+
+			selectEnglish.onclick = function() {
+				$.ajax({
+					url: "/ebookstore/getbook?suject=english",
+					method: "get",
+					error: function() {
+						alert('数据出错，请刷新');
+					},
+					success: function(data) {
+						var arr = JSON.parse(data),
+							len = arr.length,
+							showBookHTML = "";
+						for(var i = 0; i < len; i++) {
+							showBookHTML += `<div class="col-xs-6 col-md-4">
+								<a href="BookDetail.html?id=${arr[i].id}">
+									<img src="${arr[i].url}" >
+								</a>
+								<a href="BookDetail.html?id=${arr[i].id}">
+									<h3 style=" color: white;">${arr[i].name}</h3>
+								</a>
+							</div>`;
+						}
+						showBook.innerHTML = showBookHTML;
+					}
+				});
+			}
+
+
+
+			var showBook = document.querySelector("#showBook");
+			$.ajax({
+				url: "/ebookstore/getbook",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						showBookHTML = "";
+					for(var i = 0; i < len; i++) {
+						showBookHTML += `<div class="col-xs-6 col-md-4">
+						<a href="BookDetail.html?id=${arr[i].id}">
+							<img src="${arr[i].url}" >
+						</a>
+						<a href="BookDetail.html?id=${arr[i].id}">
+							<h3 style=" color: white;">${arr[i].name}</h3>
+						</a>
+					</div>`;
+					}
+					showBook.innerHTML = showBookHTML;
+				}
+			});
+		</script>
+    <script type="text/javascript">
+			var showNotice = document.querySelector("#showNotice");
+
+			$.ajax({
+				url: "/ebookstore/getNotice",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						showNoticeHTML = "";
+					for(var i = 0; i < len; i++) {
+						showNoticeHTML += `<p>${arr[i].content} [${arr[i].time}]</p>`;
+					}
+					showNotice.innerHTML = showNoticeHTML;
+				}
+			});
+
+			var english = document.querySelector("#english"),
+				computer = document.querySelector("#computer"),
+				total = document.querySelector("#total");
+
+			$.ajax({
+				url: "/ebookstore/getRankList?subject=english",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						englishHTML = "";
+					for(var i = 0; i < len; i++) {
+						englishHTML += `<a href="BookDetail.html?id=${arr[i].id}" class="list-group-item ">${i+1}.${arr[i].name}</a>`;
+					}
+					english.innerHTML = englishHTML;
+				}
+			});
+
+			$.ajax({
+				url: "/ebookstore/getRankList?subject=computer",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						computerHTML = "";
+					for(var i = 0; i < len; i++) {
+						computerHTML += `<a href="BookDetail.html?id=${arr[i].id}" class="list-group-item ">${i+1}.${arr[i].name}</a>`;
+					}
+					computer.innerHTML = computerHTML;
+				}
+			});
+
+			$.ajax({
+				url: "/ebookstore/getRankList?subject=total",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						totalHTML = "";
+					for(var i = 0; i < len; i++) {
+						totalHTML += `<a href="BookDetail.html?id=${arr[i].id}" class="list-group-item ">${i+1}.${arr[i].name}</a>`;
+					}
+					total.innerHTML = totalHTML;
+				}
+			});
+
+			var showBook = document.querySelector("#showBook");
+			$.ajax({
+				url: "/ebookstore/getbook",
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					var arr = JSON.parse(data),
+						len = arr.length,
+						showBookHTML = "";
+					for(var i = 0; i < len; i++) {
+						showBookHTML += `<div class="col-xs-6 col-md-4">
+						<a href="BookDetail.html?id=${arr[i].id}">
+							<img src="${arr[i].url}" >
+						</a>
+						<a href="BookDetail.html?id=${arr[i].id}">
+							<h3 style=" color: white;">${arr[i].name}</h3>
+						</a>
+					</div>`;
+					}
+					showBook.innerHTML = showBookHTML;
+				}
+			});
+		function delCookie(key) {
+            var date = new Date();
+            date.setTime(date.getTime() - 1);
+            var delValue = getCookie(key);
+            if (!!delValue) {
+                document.cookie = key+'='+delValue+';expires='+date.toGMTString();
+            }
+        }
+		</script>
 	</body>
 
 </html>
