--- a/ebook/ebookstore/templates/ebookstore/BookDetail.html
+++ b/ebook/ebookstore/templates/ebookstore/BookDetail.html
@@ -9,7 +9,7 @@
         -->
 		<meta charset="UTF-8">
 		<title>书籍详情</title>
-		<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/static/ebookstore/bootstrap/css/bootstrap.min.css">
 		<link href="/static/ebookstore/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="/static/ebookstore/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
 		<link href="/static/ebookstore/assets/styles.css" rel="stylesheet" media="screen">
@@ -132,41 +132,41 @@
 							<div class="panel-body">
 								<!-- 购物车的表格 -->
 								<div style="float: left; width: 200px; height: 300px;">
-									<img id="bookphoto" src="/static/ebookstore/img/书1.jpg" alt="">
+									<img id="bookphoto" src="{{ book_photo_url }}" alt="">
 								</div>
 								<div style="margin-left: 27%">
 									<table>
 										<tr>
 											<th>书&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</th>
-											<td><b id="bookISBN" name="">此处为书号</b></td>
+											<td><b id="bookISBN" name="">{{ book_ISBN }}</b></td>
 										</tr>
 										<tr>
 											<th>书&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</th>
-											<td><b id="bookname">此处书名</b></td>
+											<td><b id="bookname">{{ book_name }}</b></td>
 										</tr>
 										<tr>
 											<th>出&nbsp;版&nbsp;&nbsp;社：</th>
-											<td><b id="publisher">此处出版社</b></td>
+											<td><b id="publisher">{{ book_press }}</b></td>
 										</tr>
 										<tr>
 											<th>作&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;者：</th>
-											<td><b id="authname">此处作者</b></td>
+											<td><b id="authname">{{ book_auth_name }}</b></td>
 										</tr>
 										<tr>
 											<th>售&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;价：</th>
-											<td><b id="bookprice">此处售价</b></td>
+											<td><b id="bookprice">{{ book_price }}</b></td>
 										</tr>
 										<tr>
 											<th>出版日期：</th>
-											<td><b id="publishdate">此处出版日期</b></td>
+											<td><b id="publishdate">{{ book_publish_date }}</b></td>
 										</tr>
 										<tr>
 											<th>图书简介：</th>
-											<td><b id="bookIntro">此处简介</b></td>
+											<td><b id="bookIntro">{{ book_info }}</b></td>
 										</tr>
 										<tr>
 											<th>图书剩余：</th>
-											<td><b id="booknumbersStock">此处剩余</b></td>
+											<td><b id="booknumbersStock">{{ book_left_number }}</b></td>
 										</tr>
 									</table>
 									<br>
