--- a/ebook/ebookstore/templates/ebookstore/Login.html
+++ b/ebook/ebookstore/templates/ebookstore/Login.html
@@ -15,7 +15,7 @@
 				<div class="control-group" align="left" style="margin-left: 115px;">
 					<label class="control-label" for="focusedInput">密码</label>
 					<div class="controls">
-						<input class="input-xlarge focused" id="focusedInput" name="password" type="text">
+						<input class="input-xlarge focused" id="focusedInput" name="password" type="password">
 					</div>
 				</div>
 				<div class="control-group" align="left" style="margin-left: 115px;">
