--- a/ebook/ebookstore/templates/ebookstore/test.html
+++ b/ebook/ebookstore/templates/ebookstore/test.html
@@ -1,94 +1,152 @@
 {% extends "ebookstore/base.html" %}
-{% block title %}My-eBookStore-登录{% endblock %}
+{% block title %}书籍详情{% endblock %}
+{% block thirt %}
+{% endblock %}
 {% block body %}
-    <div align="center">
-			<div class="block" style="width: 500px;">
-				<div class="navbar navbar-inner block-header">
-					<div class="muted pull-left">登录</div>
-				</div>
-				<div class="control-group" align="left" style="margin-left: 115px;">
-					<label class="control-label" for="focusedInput">用户名</label>
-					<div class="controls">
-						<input class="input-xlarge focused" id="focusedInput" name="username" type="text">
+		<div class="container">
+			<div style='width: 20px; border: 1px; float: left; height: 450px;'>
+				<!--这个div模拟一条白色的垂直分割线-->
+			</div>
+			<div id="second">
+				<div class="div-left" style="float: left; width: 166px;">
+					<div class="row" style="float: left; width: 1086px; margin: 0;">
+						<div class="panel panel-primary">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+								<p class="text-center">≡≡≡图书信息≡≡≡</p>
+							</h3>
+							</div>
+							<div class="panel-body">
+								<!-- 购物车的表格 -->
+								<div style="float: left; width: 200px; height: 300px;">
+									<img id="bookphoto" src="{{ book_photo_url }}" alt="">
+								</div>
+								<div style="margin-left: 27%">
+									<table>
+										<tr>
+											<th>书&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号：</th>
+											<td><b id="bookISBN" name="">{{ book_ISBN }}</b></td>
+										</tr>
+										<tr>
+											<th>书&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</th>
+											<td><b id="bookname">{{ book_name }}</b></td>
+										</tr>
+										<tr>
+											<th>出&nbsp;版&nbsp;&nbsp;社：</th>
+											<td><b id="publisher">{{ book_press }}</b></td>
+										</tr>
+										<tr>
+											<th>作&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;者：</th>
+											<td><b id="authname">{{ book_auth_name }}</b></td>
+										</tr>
+										<tr>
+											<th>售&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;价：</th>
+											<td><b id="bookprice">{{ book_price }}</b></td>
+										</tr>
+										<tr>
+											<th>出版日期：</th>
+											<td><b id="publishdate">{{ book_publish_date }}</b></td>
+										</tr>
+										<tr>
+											<th>图书简介：</th>
+											<td><b id="bookIntro">{{ book_info }}</b></td>
+										</tr>
+                                        <!--
+										<tr>
+											<th>图书剩余：</th>
+											<td><b id="booknumbersStock">{{ book_left_number }}</b></td>
+										</tr>
+										-->
+									</table>
+									<br>
+									<br>
+									<form class="form-horizontal" style="height: 100px;">
+										<div class="form-group" style="margin-left: 35%">
+											<p class="text-info" style="width: 50px">数量:</p>
+											<div class="row" style="margin-left: 0;">
+												<div class="col-sm-6">
+													<div class="input-group">
+														<span class="input-group-btn">
+														<button onclick="numDec()" class="form-control btn btn-primary" type="button">-</button>
+													</span> <input type="text" value="1" id="quantity" class="form-control" style="width: 200px; height: 33px; text-align: center;" /> <span class="input-group-btn">
+														<button onclick="numAdd()" class="btn btn-primary form-control" type="button">+</button>
+													</span>
+													</div>
+												</div>
+												<!-- col-sm-6 -->
+											</div>
+										</div>
+									</form>
+									<br>
+									<div class="btn-group" role="group" style="margin-left: 37%">
+										<a class="btn btn-primary" id="addCart" role="button">添加到购物车</a>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="control-group" align="left" style="margin-left: 115px;">
-					<label class="control-label" for="focusedInput">密码</label>
-					<div class="controls">
-						<input class="input-xlarge focused" id="focusedInput" name="password" type="text">
-					</div>
-				</div>
-				<div class="control-group" align="left" style="margin-left: 115px;">
-					<div class="controls">
-						<label>
-                  <input type="checkbox" id="optionsCheckbox2" name="remember" value="option1">记住密码</label>
-					</div>
-				</div>
-				<div class="btn-group" role="group">
-					<button id="loginbutton" class="btn btn-success" style="width:100px;height:30px">登录</button>
-					<a class="btn btn-primary" href="Register.html" role="button" style="width:100px;height:30px">注册</a>
-				</div>
-
 			</div>
 		</div>
+		<hr style="width: 70%; margin: 0 auto;"/>
+		<div class="row-fluid" style=" width: 1086px; margin: 0 auto;">
+                        <!-- block -->
+                        <div class="block">
+                            <div class="navbar navbar-inner block-header">
+                                <div class="muted pull-left">书籍评价</div>
+                            </div>
+                            <div class="block-content collapse in">
+                                <div class="span12">
+  									<table class="table table-striped">
+						              <thead>
+						                <tr>
+						                  <th style="width: 10%;">评价</th>
+						                  <th style="width: 60%;">内容</th>
+						                  <th style="width: 15%;">用户名</th>
+						                  <th style="width: 15%;">时间</th>
+						                </tr>
+						              </thead>
+						              <tbody>
+						                <tr>
+						                  <td><span class="glyphicon glyphicon-thumbs-up"></span></td>
+						                  <td>书很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好很好</td>
+						                  <td>Otto</td>
+						                  <td>2018.11.30</td>
+						                </tr>
+						                <tr>
+						                  <td><span class="glyphicon glyphicon-thumbs-down"></td>
+						                  <td>书很差很差很差很差很差很差很差很差很差很差很差很差很差</td>
+						                  <td>Thornton</td>
+						                  <td>2018.12.31</td>
+						                </tr>
+						              </tbody>
+						            </table>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /block -->
+                    </div>
 {% endblock %}
 {% block js %}
-		<script type="text/javascript">
-			window.onload = function() {
-				var nameElement = document.querySelector("input[name='username']");
-				var passwordElement = document.querySelector("input[name='password']");
-				var rememberElement = document.querySelector("input[name='remember']");
-				var login = document.querySelector("#loginbutton");
-				login.onclick = function() {
-					var name = nameElement.value,
-						password = passwordElement.value;
-					if(name.length == 0) {
-						alert("用户名不能为空");
-						console.log(name);
-						return;
-					}
-					if(password.length == 0) {
-						alert("密码不能为空");
-						return;
-					}
-
-					$.ajax({
-						url: "/ebookstore/login",
-						method: "post",
-						data: {
-							name: name,
-							password: password
-						},
-						error: function() {
-							alert('登录失败');
-						},
-						success: function(data) {
-							switch(Number(data)) {
-								case 1:
-								    /*
-									if(rememberElement.value == true) {
-										document.cookie =
-											`name=${encodeURIComponent(name)};expires=${new Date(Date.now()+30*86400*1000)}`;
-										document.cookie =
-											`password=${encodeURIComponent(password)};expires=${new Date(Date.now()+30*86400*1000)}`;
-									}
-									*/
-									location.href = "/ebookstore/index";
-									break;
-								case 0:
-									alert("用户名或密码不正确！");
-									nameElement.value = "";
-									passwordElement.value = "";
-									nameElement.focus();
-									break;
-								case -1:
-									alert("你的帐户已被冻结！");
-									break;
-							}
-						}
-					});
+<script>
+			/*商品数量+1*/
+			function numAdd() {
+				var num_add = parseInt($("#quantity").val()) + 1;
+				if($("#quantity").val() == "") {
+					num_add = 1;
 				}
+				$("#quantity").val(num_add);
+			}
 
+			/*商品数量-1*/
+			function numDec() {
+				var num_dec = parseInt($("#quantity").val()) - 1;
+				if(num_dec < 1) {
+					//购买数量必须大于或等于1
+					alert("数量不可以小于1");
+				} else {
+					$("#quantity").val(num_dec);
+				}
 			}
 		</script>
 {% endblock %}
