--- a/ebook/ebookstore/templates/ebookstore/MyInoformation.html
+++ b/ebook/ebookstore/templates/ebookstore/MyInoformation.html
@@ -130,7 +130,7 @@
 			</div>
 			<div class="block-content collapse in">
 				<div class="span12">
-					<form class="form-horizontal">
+					<form class="form-horizontal" onsubmit="return false;">
 						<div class="control-group">
 							<label class="control-label">用户名</label>
 							<div class="controls">
@@ -193,14 +193,14 @@
 		}
 
 		function modify() {
-			var name = document.getElementById("user_name").value
-				address = document.getElementById("user_address").value
-				password = document.getElementById("user_password").value
+			//e.preventDefault();
+			var name = document.getElementById("user_name").value,
+				address = document.getElementById("user_address").value,
+				password = document.getElementById("user_password").value;
 			$.ajax({
 				url: "/ebookstore/myinfo/",
 				method: "post",
 				data: {
-					"name": name,
 					"address" :address,
 					"password": password
 				},
@@ -219,6 +219,7 @@
 							}
 							*/
 							//location.href = "/ebookstore/myinfo";
+							window.history.go(0);
 							break;
 						case -1:
 							alert("你的帐户已被冻结！");
