admin manage availavle

--- a/ebook/ebookstore/templates/ebookstore/Administrator-Login.html
+++ b/ebook/ebookstore/templates/ebookstore/Administrator-Login.html
@@ -78,11 +78,11 @@
 
 			</div>
 		</div>
-		<link href="/static/eoookstore/css/datepicker.css" rel="stylesheet" media="screen">
-		<link href="/static/eoookstore/css/uniform.default.css" rel="stylesheet" media="screen">
-		<link href="/static/eoookstore/css/chosen.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/datepicker.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/uniform.default.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/chosen.min.css" rel="stylesheet" media="screen">
 
-		<link href="/static/eoookstore/css/bootstrap-wysihtml5.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap-wysihtml5.css" rel="stylesheet" media="screen">
 
 		<script src="/static/ebookstore/js/jquery-1.9.1.js"></script>
 		<script src="/static/ebookstore/js/jquery.uniform.min.js"></script>
@@ -111,7 +111,7 @@
 				}
 
 				$.ajax({
-					url: "/ebookstore/admin-login",
+					url: "/ebookstore/adminLogin",
 					method: "post",
 					data: {
 						name: name,
