--- a/ebook/ebookstore/templates/ebookstore/Book-manage.html
+++ b/ebook/ebookstore/templates/ebookstore/Book-manage.html
@@ -72,7 +72,13 @@
 					<ul class="nav pull-right">
 						<li class="dropdown">
 							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> 管理员 <i class="caret"></i>
+								<i class="icon-user"></i>
+                                {% if admin_name %}
+                                    admin{{ admin_name }}
+                                {% else %}
+                                    管理员
+                                {% endif %}
+                                <i class="caret"></i>
 							</a>
 							<ul class="dropdown-menu">
 								<li>
