--- a/ebook/ebookstore/templates/ebookstore/comment-manage.html
+++ b/ebook/ebookstore/templates/ebookstore/comment-manage.html
@@ -66,7 +66,7 @@
 							<a href="account-manage.html">账目管理</a>
 						</li>
 						<li class="active">
-							<a href="conment-manage.html">评价管理</a>
+							<a href="comment-manage.html">评价管理</a>
 						</li>
 					</ul>
 					<ul class="nav pull-right">
