--- a/ebook/ebookstore/templates/ebookstore/user-manage.html
+++ b/ebook/ebookstore/templates/ebookstore/user-manage.html
@@ -10,16 +10,16 @@
 		<title>用户管理</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<link href="/static/ebookstor/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="/static/ebookstor/css/styles.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+		<link href="/static/ebookstore/css/styles.css" rel="stylesheet" media="screen">
 		<link href="/static/ebookstore/assets/DT_bootstrap.css" rel="stylesheet" media="screen">
 		<script src="/static/ebookstore/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<script src="/static/ebookstore/vendors/jquery-1.9.1.js"></script>
-        <script src="/static/ebookstore/bootstrap/js/bootstrap.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="/static/ebookstore/vendors/datatables/js/jquery.dataTables.min.js"></script>
-        <script src="assets/scripts.js"></script>
-        <script src="assets/DT_bootstrap.js"></script>
+        <script src="/static/ebookstore/assets/scripts.js"></script>
+        <script src="/static/ebookstore/assets/DT_bootstrap.js"></script>
 		<style>
 			.col-center-block {
 				float: none;
@@ -31,25 +31,25 @@
 		<style type="text/css">
 			body {
 				margin: 0 auto;
-				background-image: url(/static/ebookstore/img/背景.jpg);
+				background-image: url(img/背景.jpg);
 				background-size: cover;
 			}
 		</style>
 	</head>
 	<body>
-		<nav id="src="/static/ebookstore/assets-example" class="src="/static/ebookstore/assets src="/static/ebookstore/assets-inverse src="/static/ebookstore/assets src="/static/ebookstore/assets-fixed-top src="/static/ebookstore/assets-has-shadow" role="navigation">
+		<nav id="navbar-example" class="navbar navbar-inverse navbar navbar-fixed-top navbar-has-shadow" role="navigation">
 			<div class="container-fluid">
-				<div class="src="/static/ebookstore/assets-header">
-					<button type="button" class="src="/static/ebookstore/assets-toggle collapsed " data-toggle="collapse" data-target=".bs-js-src="/static/ebookstore/assets-scrollspy">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target=".bs-js-navbar-scrollspy">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-					<a class="src="/static/ebookstore/assets-brand" href="#">My-eBookStore</a>
+					<a class="navbar-brand" href="#">My-eBookStore</a>
 				</div>
-				<div class="collapse src="/static/ebookstore/assets-collapse bs-js-src="/static/ebookstore/assets-scrollspy">
-					<ul class="nav src="/static/ebookstore/assets-nav">
+				<div class="collapse navbar-collapse bs-js-navbar-scrollspy">
+					<ul class="nav navbar-nav">
 						<li>
 							<a href="Book-manage.html">图书管理</a>
 						</li>
@@ -87,7 +87,7 @@
 		<div class="row-fluid" style="width: 70%;margin: 0 auto;" >
             <!-- block -->
             <div class="block">
-                <div class="src="/static/ebookstore/assets src="/static/ebookstore/assets-inner block-header">
+                <div class="navbar navbar-inner block-header">
                     <div class="muted pull-left">用户管理</div>
                 </div>
                 <div class="block-content collapse in">
