--- a/ebook/ebookstore/templates/ebookstore/test.html
+++ b/ebook/ebookstore/templates/ebookstore/test.html
@@ -1,123 +1,75 @@
-{% extends "ebookstore/base.html" %}
-{% block title %}我的信息{% endblock %}
+{% extends "ebookstore/manage_base.html" %}
+{% block title %}评价管理{% endblock %}
 {% block thirt %}
-    	<style>
-			img {
-				width: 40px;
-				height: 25px;
-				position: absolute;
-				right: 0px;
-				margin: 15px;
-			}
-		</style>
 {% endblock %}
 {% block body %}
-<div class="row-fluid" style="width: 70%; margin:0 auto ;">
-		<!-- block -->
-		<div class="block">
-			<div class="navbar navbar-inner block-header">
-				<div class="muted pull-left">我的信息</div>
-			</div>
-			<div class="block-content collapse in">
-				<div class="span12">
-					<form class="form-horizontal">
-						<div class="control-group">
-							<label class="control-label">用户名</label>
-							<div class="controls">
-								<span id="user_name"  class="input-xlarge uneditable-input">{{ name }}</span>
-							</div>
-						</div>
-						<div class="control-group">
-							<label class="control-label">电话</label>
-							<div class="controls">
-								<span id="user_phone" class="input-xlarge uneditable-input">{{ phone }}</span>
-							</div>
-						</div>
-						<div class="control-group">
-							<label class="control-label" for="typeahead">地址 </label>
-							<div class="controls">
-								<input type="text" class="span6" id="user_address" data-provide="typeahead" data-items="4" value={{ address }}>
-							</div>
-						</div>
-
-						<div class="control-group">
-							<label class="control-label" for="typeahead">密码 </label>
-							<div class="controls" id="psw_invisible1">
-								<input type="password" class="span6" id="user_password" />
-								<img id="visible" onclick="showPsw()" src="/static/ebookstore/img/关闭.jpg">
-								<img id="invisible" onclick="hidePsw()" src="/static/ebookstore/img/打开.jpg">
-							</div>
-						</div>
-						<div class="control-group">
-							<label class="control-label" for="typeahead">确认密码 </label>
-							<div class="controls" id="psw_invisible2">
-								<input type="password" class="span6" id="user_password_sure"/>
-							</div>
-						</div>
-
-						<div class="form-actions">
-							<button class="btn btn-primary" onclick="modify()">保存</button>
-							<a type="reset" class="btn" href="index.html">取消</a>
-						</div>
-					</form>
-
-				</div>
-			</div>
-		</div>
-		<!-- /block -->
-	</div>
+<div class="row-fluid" style="width: 70%;margin: 0 auto;" >
+            <!-- block -->
+            <div class="block">
+                <div class="navbar navbar-inner block-header">
+                    <div class="muted pull-left">评论管理</div>
+                </div>
+                <div class="block-content collapse in">
+                    <div class="span12">
+                    	<div class="table-toolbar">
+								<form action="#" class="pull-left">
+									<div class="form-group has-feedback" >
+										<label for="search" class="sr-only">搜索关键字</label>
+										<input type="search" placeholder="请输入查找的评价内容/用户" class="form-control">
+										<span class="glyphicon glyphicon-search  form-control-feedback"></span>
+									</div>
+								</form>
+                       	</div>
+						<table class="table table-striped" style="margin: auto;">
+			              <thead>
+			                <tr>
+			                  <th style="width: 100px;">评价编号</th>
+			                  <th style="width: 100px;">书名</th>
+			                  <th style="width: 100px;">用户名</th>
+			                  <th style="width: 500px;">内容</th>
+			                  <th style="width: 140px;">处理</th>
+			                </tr>
+			              </thead>
+			              <tbody>
+			                <tr id="tr1">
+			                  <td>1</td>
+			                  <td>加密和解密</td>
+			                  <td><a href="user-manage.html">王瀚</a></td>
+			                  <td>@mdo</td>
+			                  <td>
+			                  	<div class="btn-group" role="group">
+									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
+								</div>
+			                  </td>
+			                </tr>
+			                <tr>
+			                  <td>2</td>
+			                  <td>数据库</td>
+			                  <td><a href="user-manage.html">汪涛</a></td>
+			                  <td>@fat</td>
+			                  <td><div class="btn-group" role="group" style="align-content: center;">
+									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
+								  </div>
+			                  </td>
+			                </tr>
+			                <tr>
+			                  <td>3</td>
+			                  <td>Larry</td>
+			                  <td><a href="user-manage.html">zzuwenjie</a></td>
+			                  <td>@twitter</td>
+			                  <td><div class="btn-group" role="group" >
+									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
+								  </div>
+			                  </td>
+			                </tr>
+			              </tbody>
+			            </table>
+                    </div>
+                </div>
+            </div>
+            <!-- /block -->
+       </div>
 {% endblock %}
 {% block js %}
-<script type="text/javascript">
-		//隐藏text block，显示password block
-		function showPsw() {
-			document.getElementById("user_password").type = "text";
-			document.getElementById("user_password_sure").type = "text";
-			document.getElementById("visible").style.display = "none";
-			document.getElementById("invisible").style.display = "";
-		}
-		//隐藏password，显示text
-		function hidePsw() {
-			document.getElementById("user_password").type = "password";
-			document.getElementById("user_password_sure").type = "password";
-			document.getElementById("visible").style.display = "";
-			document.getElementById("invisible").style.display = "none";
-		}
 
-		function modify() {
-			var name = document.getElementById("user_name").value
-				address = document.getElementById("user_address").value
-				password = document.getElementById("user_password").value
-			$.ajax({
-				url: "/ebookstore/myinfo/",
-				method: "post",
-				data: {
-					"name": name,
-					"address" :address,
-					"password": password
-				},
-				error: function () {
-				},
-				success: function (data) {
-					switch (Number(data)) {
-						case 1:
-							alert('保存成功');
-							/*
-							if(rememberElement.value == true) {
-								document.cookie =
-									`name=${encodeURIComponent(name)};expires=${new Date(Date.now()+30*86400*1000)}`;
-								document.cookie =
-									`password=${encodeURIComponent(password)};expires=${new Date(Date.now()+30*86400*1000)}`;
-							}
-							*/
-							//location.href = "/ebookstore/myinfo";
-							break;
-						case -1:
-							alert("你的帐户已被冻结！");
-							break;
-					}
-				}
-			});
-		}
-	</script>
 {% endblock %}
