--- a/ebook/ebookstore/templates/ebookstore/base.html
+++ b/ebook/ebookstore/templates/ebookstore/base.html
@@ -205,10 +205,10 @@
 									<a tabindex="-1" href="/ebookstore/myinfo" id="myinfo">我的信息</a>
 								</li>
 								<li>
-									<a tabindex="-1" href="#">我的订单</a>
+									<a tabindex="-1" href="/ebookstore/order_content">我的订单</a>
 								</li>
 								<li>
-									<a tabindex="-1" href="#">购物车</a>
+									<a tabindex="-1" href="/ebookstore/cart">购物车</a>
 								</li>
 								<li class="divider"></li>
 								<li>
