--- a/ebook/ebookstore/templates/ebookstore/UserOrder.html
+++ b/ebook/ebookstore/templates/ebookstore/UserOrder.html
@@ -114,7 +114,7 @@
 			              </thead>
 			              <tbody>
 			                <tr id="tr1">
-			                  <td><a href="OrderDetail.html">123</a></td>
+			                  <td><a href="OrderContent.html">123</a></td>
 			                  <td>100</td>
 			                  <td>2018/9/7</td>
 			                  <td>未支付</td>
@@ -123,7 +123,7 @@
 			                  </td>
 			                </tr>
 			                <tr>
-			                  <td><a href="OrderDetail.html">234</a></td>
+			                  <td><a href="OrderContent.html">234</a></td>
 			                  <td>105</td>
 			                  <td>2015/9/2</td>
 			                  <td>已发货</td>
@@ -132,7 +132,7 @@
 			                  </td>
 			                </tr>
 			                <tr>
-			                  <td><a href="OrderDetail.html">456</a></td>
+			                  <td><a href="OrderContent.html">456</a></td>
 			                  <td>111</td>
 			                  <td>2015/9/2</td>
 			                  <td>已关闭</td>
@@ -141,7 +141,7 @@
 			                  </td>
 			                </tr>
 			                <tr>
-			                  <td><a href="OrderDetail.html">4654</a></td>
+			                  <td><a href="OrderContent.html">4654</a></td>
 			                  <td>126</td>
 			                  <td>2017/9/2</td>
 			                  <td>已完成</td>
