--- a/ebook/ebookstore/templates/ebookstore/order.html
+++ b/ebook/ebookstore/templates/ebookstore/order.html
@@ -7,7 +7,7 @@
         	描述：管理员查看订单详情页面
         -->
 		<meta charset="UTF-8">
-		<title>订单详情</title>
+		<title>订单信息</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<link href="/static/ebookstore/css/bootstrap.min.css" rel="stylesheet" media="screen">
