--- a/ebook/ebookstore/templates/ebookstore/test.html
+++ b/ebook/ebookstore/templates/ebookstore/test.html
@@ -1,74 +1,121 @@
-{% extends "ebookstore/manage_base.html" %}
-{% block title %}评价管理{% endblock %}
+{% extends "ebookstore/base.html" %}
+{% block title %}订单详情{% endblock %}
 {% block thirt %}
 {% endblock %}
 {% block body %}
-<div class="row-fluid" style="width: 70%;margin: 0 auto;" >
-            <!-- block -->
-            <div class="block">
-                <div class="navbar navbar-inner block-header">
-                    <div class="muted pull-left">评论管理</div>
-                </div>
-                <div class="block-content collapse in">
-                    <div class="span12">
-                    	<div class="table-toolbar">
-								<form action="#" class="pull-left">
-									<div class="form-group has-feedback" >
-										<label for="search" class="sr-only">搜索关键字</label>
-										<input type="search" placeholder="请输入查找的评价内容/用户" class="form-control">
-										<span class="glyphicon glyphicon-search  form-control-feedback"></span>
-									</div>
-								</form>
-                       	</div>
-						<table class="table table-striped" style="margin: auto;">
-			              <thead>
-			                <tr>
-			                  <th style="width: 100px;">评价编号</th>
-			                  <th style="width: 100px;">书名</th>
-			                  <th style="width: 100px;">用户名</th>
-			                  <th style="width: 500px;">内容</th>
-			                  <th style="width: 140px;">处理</th>
-			                </tr>
-			              </thead>
-			              <tbody>
-			                <tr id="tr1">
-			                  <td>1</td>
-			                  <td>加密和解密</td>
-			                  <td><a href="user-manage.html">王瀚</a></td>
-			                  <td>@mdo</td>
-			                  <td>
-			                  	<div class="btn-group" role="group">
-									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
+<div class="container">
+			<div style='width: 20px; border: 1px; float: left;'>
+				<!--这个div模拟一条白色的垂直分割线-->
+			</div>
+			<div id="second">
+				<div class="div-left" style="float: left; width: 166px;">
+					<div class="row" style="float: left; width: 1086px; margin: 0;">
+						<div class="panel panel-primary">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+								<p class="text-center">≡≡≡订单信息≡≡≡</p>
+							</h3>
+							</div>
+							<div class="panel-body">
+								<!-- 购物车的表格 -->
+								<div style="margin-left: 15%">
+									<table>
+										<tr>
+											<th>订&emsp;&emsp;单&emsp;&emsp;号：</th>
+											<td><b>此处为订单号</b></td>
+										</tr>
+										<tr>
+											<th>用&emsp;&emsp;户&emsp;&emsp;名：</th>
+											<td><b>此处用户名</b></td>
+										</tr>
+										<tr>
+											<th>收&emsp;&emsp;货&emsp;&emsp;人：</th>
+											<td><b>此处收货人</b></td>
+										</tr>
+										<tr>
+											<th>收&emsp;货&emsp;地&emsp;址：</th>
+											<td><b>此处收货地址</b></td>
+										</tr>
+										<tr>
+											<th>收货人联系方式：</th>
+											<td><b>此处收货人联系方式</b></td>
+										</tr>
+										<tr>
+											<th>支&emsp;付&emsp;方&emsp;式：</th>
+											<td><b>此处支付方式</b></td>
+										</tr>
+										<tr>
+											<th>支&emsp;付&emsp;状&emsp;态：</th>
+											<td><b>此处支付状态</b></td>
+										</tr>
+										<tr>
+											<th>总&emsp;&emsp;金&emsp;&emsp;额：</th>
+											<td><b>此处总金额</b></td>
+										</tr>
+									</table>
 								</div>
-			                  </td>
-			                </tr>
-			                <tr>
-			                  <td>2</td>
-			                  <td>数据库</td>
-			                  <td><a href="user-manage.html">汪涛</a></td>
-			                  <td>@fat</td>
-			                  <td><div class="btn-group" role="group" style="align-content: center;">
-									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
-								  </div>
-			                  </td>
-			                </tr>
-			                <tr>
-			                  <td>3</td>
-			                  <td>Larry</td>
-			                  <td><a href="user-manage.html">zzuwenjie</a></td>
-			                  <td>@twitter</td>
-			                  <td><div class="btn-group" role="group" >
-									<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除</a>
-								  </div>
-			                  </td>
-			                </tr>
-			              </tbody>
-			            </table>
-                    </div>
-                </div>
-            </div>
-            <!-- /block -->
-       </div>
+								<div class="row-fluid" style="width: 70%;margin: 0 auto;" >
+						            <!-- block -->
+						            <div class="block">
+						                <div class="navbar navbar-inner block-header">
+						                    <div class="muted pull-left">订单书籍信息</div>
+						                </div>
+						                <div class="block-content collapse in">
+						                    <div class="span12">
+												<table class="table table-striped" style="margin: auto;">
+									              <thead>
+									                <tr>
+									                  <th style="width: 50px;">ISBN</th>
+									                  <th style="width: 300px;">书名</th>
+									                  <th style="width: 300px;">出版社</th>
+									                  <th style="width: 100px;">作者</th>
+									                  <th style="width: 100px;">数量</th>
+									                  <th style="width: 140px;">单价</th>
+									                  <th style="width: 140px;">金额</th>
+									                </tr>
+									              </thead>
+									              <tbody>
+									                <tr id="tr1">
+									                  <td>1</td>
+									                  <td>加密和解密</td>
+									                  <td>Otto</td>
+									                  <td>@mdo</td>
+									                  <td>20</td>
+									                  <td>**</td>
+									                  <td>**</td>
+									                </tr>
+									                <tr>
+									                  <td>2</td>
+									                  <td>数据库</td>
+									                  <td>Thornton</td>
+									                  <td>@fat</td>
+									                  <td>20</td>
+									                  <td>**</td>
+									                  <td>**</td>
+									                </tr>
+									                <tr>
+									                  <td>3</td>
+									                  <td>Larry</td>
+									                  <td>the Bird</td>
+									                  <td>@twitter</td>
+									                  <td>30</td>
+									                  <td>**</td>
+									                  <td>**</td>
+									                </tr>
+									              </tbody>
+									            </table>
+						                    </div>
+						                </div>
+						            </div>
+						            <!-- /block -->
+						       </div>
+						       <a class="btn btn-info pull-right" href="order-manage.html" role="button" style="width:100px;height:30px">返回</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 {% endblock %}
 {% block js %}
 
